force-app/main/default/objects/RFLIB_Log__c/RFLIB_Log__c.object-meta.xml
<CustomObject>
    <label>RFLIB Log</label>
    <nameField>
        <label>Log Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>RFLIB Logs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>