force-app/main/default/objects/RFLIB_Log__c/fields/Affected_Components__c.field-meta.xml
<CustomField>
    <fullName>Affected_Components__c</fullName>
    <label>Affected Components</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>