force-app/main/default/objects/RFLIB_Log__c/fields/AI_Analysis__c.field-meta.xml
<CustomField>
    <fullName>AI_Analysis__c</fullName>
    <label>AI Analysis</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>