force-app/main/default/objects/RFLIB_Log__c/fields/Created_Date_Sim__c.field-meta.xml
<CustomField>
    <fullName>Created_Date_Sim__c</fullName>
    <label>Created Date Sim</label>
    <type>DateTime</type>
</CustomField>