force-app/main/default/objects/RFLIB_Log__c/fields/Error_Sequence__c.field-meta.xml
<CustomField>
    <fullName>Error_Sequence__c</fullName>
    <label>Error Sequence</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>