force-app/main/default/objects/RFLIB_Log__c/fields/Parent__c.field-meta.xml
<CustomField>
    <fullName>Parent__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Parent</label>
    <referenceTo>RFLIB_Log__c</referenceTo>
    <relationshipLabel>RFLIB Logs</relationshipLabel>
    <relationshipName>RFLIB_Logs</relationshipName>
    <type>Lookup</type>
</CustomField>