force-app/main/default/objects/RFLIB_Log__c/fields/Pattern_Detection__c.field-meta.xml
<CustomField>
    <fullName>Pattern_Detection__c</fullName>
    <label>Pattern Detection</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>