force-app/main/default/objects/RFLIB_Log__c/fields/Platform_Context__c.field-meta.xml
<CustomField>
    <fullName>Platform_Context__c</fullName>
    <label>Platform Context</label>
    <length>255</length>
    <type>Text</type>
</CustomField>