force-app/main/default/objects/RFLIB_Log__c/fields/Platform_Log_Level__c.field-meta.xml
<CustomField>
    <fullName>Platform_Log_Level__c</fullName>
    <label>Platform Log Level</label>
    <length>255</length>
    <type>Text</type>
</CustomField>