force-app/main/default/objects/RFLIB_Log__c/fields/Platform_Log_Messages__c.field-meta.xml
<CustomField>
    <fullName>Platform_Log_Messages__c</fullName>
    <label>Platform Log Messages</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>