force-app/main/default/objects/RFLIB_Log__c/fields/Platform_Request_Id__c.field-meta.xml
<CustomField>
    <fullName>Platform_Request_Id__c</fullName>
    <label>Platform Request Id</label>
    <length>50</length>
    <type>Text</type>
</CustomField>