force-app/main/default/objects/RFLIB_Log__c/fields/Recommended_Actions__c.field-meta.xml
<CustomField>
    <fullName>Recommended_Actions__c</fullName>
    <label>Recommended Actions</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>