force-app/main/default/objects/RFLIB_Log__c/fields/User_Actions__c.field-meta.xml
<CustomField>
    <fullName>User_Actions__c</fullName>
    <label>User Actions</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>